--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,22 +4,229 @@ output:
   html_document:
     keep_md: true
 ---
-
+For this project I didn't want to use any other library to process the data but the base, as a challenge to myself and as a way to learn more deepply how R works, I know that it would have been easier with dplyr or reshape2, but it wouldn't have been as fun :D , the libraries loaded are used because the project demands it to, or because the base plots are plain ulgy.  
 
 ## Loading and preprocessing the data
+First, load the libraries to use and set the Locale  
+```{r, echo = TRUE}
+library(ggplot2)
+library(xtable)
+Sys.setlocale("LC_TIME", "english")
+```
 
+Load the data.  
+
+```{r, echo = TRUE}
+datos <- read.csv("activity.csv")
+```
+
+Luckily, the data is already tidy.  
 
 
 ## What is mean total number of steps taken per day?
 
+### Histogram of the total number of steps taken each day  
+Make the vectors **x** and **y** and build our plot.  
+
+```{r, echo = TRUE}
+stepsbyday <- split(datos$steps,datos$date)
+totalsteps <- sapply(stepsbyday, sum, na.rm = TRUE)
+totaldays <- strptime(names(totalsteps),"%Y-%m-%d")
+miplot <- ggplot()
+mibar <- geom_bar(aes(totaldays,totalsteps),
+                  stat = "identity", fill = rgb(0.5,0.5,1))
+milabs <- labs(x = "Date of Measurement",
+               y = "Steps",
+               title = "Total Steps taken by day")
+
+print(miplot+mibar+milabs)
+```
+  
+### mean and median total number of steps taken per day  
+
+```{r, echo = TRUE}
+mean_day <- sapply(stepsbyday,mean, na.rm =TRUE)
+median_day <- sapply(stepsbyday,median, na.rm =TRUE)
+```
+
+And see the result in a table: 
+```{r, echo = TRUE, results = "asis"}
+mytable <- xtable(data.frame(totalsteps,mean_day,median_day),
+                  align = "cccc" )
+print(mytable, type = "html")
+```
+
+## What is the average daily activity pattern?  
+
+### Time series plot of the 5-minute interval and the average number of steps taken, averaged across all days  
+
+Because the interval number repeats over the days, by splitting the data by date we will get the vectors of interval for every day.  
+
+```{r, echo = TRUE}
+stepsbyinter <- split(datos$steps,datos$interval)
+avrsteps <- sapply(stepsbyinter,sum,na.rm=TRUE)/sum(datos$steps,na.rm=TRUE)
+intervals = as.numeric(names(avrsteps))
+
+miplot <- ggplot()
+miline <- geom_line(aes(intervals,avrsteps,colour = avrsteps))
+milabs <- labs(x = "Intervals", y = "Average Steps",
+               title = "Average Steps by Interval")
+print(miplot+miline+milabs)
+```
 
 
-## What is the average daily activity pattern?
+### Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?  
 
+```{r, echo = TRUE}
+maxvalue <- max(avrsteps)
+maxinterval <- names(avrsteps)[avrsteps==maxvalue]
+```
 
+The Maximum value is located in interval **`r maxinterval`**  
 
 ## Imputing missing values
 
+### Total number of missing values in the dataset  
+
+```{r, echo = TRUE}
+missing_values <- sum(is.na(datos$steps))
+```
+
+There are `r missing_values` missing values in the DataSet.  
+
+### Strategy for filling in all of the missing values in the dataset
+
+We have a problem in our hands, it seems that when there are **NA** values in a day, those **NA** values are for all day long, so, it is not tha we don't have an **interval** but the whole day is missing!, here is the proof:  
+
+```{r, echo = TRUE}
+dates_with_nas <- unique(datos$date[is.na(datos$steps)])
+length(datos$steps[datos$date %in% dates_with_nas])
+
+```
+
+We just got the dates where there are **NA** values, and then we made a vector of those values that are on those dates, so if all the values in the dates are NA's, the result should be the sames as in navalues.  
+
+As the result is the same, if we use the **mean** of the day, all **NA** values would become **0** so we have to find another method.  
+
+To imput missing values  the mean of **the last three days** for a given interval will be used, Make a new DataFrame, to mantain access to the original data later.  
+
+### New dataset that is equal to the original dataset but with the missing data filled in  
+
+```{r, echo = TRUE}
+#first, make the dataframe to change the data
+newdatos <- data.frame(datos)
+#split the data by interval so we can find by date the values
+splitted <- split(newdatos[-3],newdatos$interval)
+#make a vector of positions to find the na's values
+napos <- seq(1,length(newdatos$steps))[is.na(newdatos$steps)]
+#for every position, calculate the mean of the last three days...
+#unless it is the first day
+initdate <- newdatos$date[1]
+#for every position where there is a NA value
+for(pos in napos){
+    #if it is the initial date it cannot look back for other values
+    #put a 0 instead
+    if(newdatos$date[pos] == initdate){
+        newdatos$steps[pos] = 0
+    }else{
+        #sub is the interval name to search on the list, getting a dataframe
+        #with the dates values and steps for those dates
+        sub <- splitted[[  as.character(newdatos$interval[pos]) ]]
+        #find the position in the dataframe searched
+        datepos <- grep(newdatos$date[pos],sub$date)
+        #get the mean of the last three positions
+        meandata <- as.integer(mean(sub$steps[seq(datepos-3,datepos-1)],
+                                    na.rm=TRUE))
+            newdatos$steps[pos] = meandata
+            
+            }
+    }
+```
+
+Now newdatos should have no **NA** values, we are going to prove this by referencing the original dataframe:  
+
+```{r, echo = TRUE}
+summary(newdatos$steps[is.na(datos$steps)])
+```
+
+And getting the total **NA** for newdatos:
+
+```{r, echo = TRUE}
+sum(is.na(newdatos$steps))
+```
+
+### Histogram of the total number of steps taken each day
+
+Next, our histogram of newly baked values  
+
+```{r, echo = TRUE}
+stepsbyday <- split(newdatos$steps,newdatos$date)
+totalsteps <- sapply(stepsbyday, sum)
+totaldays <- strptime(names(totalsteps),"%Y-%m-%d")
+
+#and plot
+mi_new_plot <- ggplot()
+mi_new_bar <- geom_bar(aes(totaldays,totalsteps),
+                  stat = "identity", fill = rgb(0.5,0.5,1))
+mi_new_labs <- labs(x = "Date of Measurement",
+               y = "Steps",
+               title = "Total Steps taken by day",
+               subtitle = "Missing data filled")
+
+print(miplot+mibar+milabs)
+```
+
+### mean and median total number of steps taken per day
+
+```{r, echo = TRUE, results = "asis"}
+#mean and median
+new_mean_day <- sapply(stepsbyday,mean)
+new_median_day <- sapply(stepsbyday,median)
+my_new_table <- xtable(data.frame(totalsteps,new_mean_day,new_median_day),
+                       align="cccc" )
+print(my_new_table, type = "html")
+```
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+### New factor to separate weekdays and weekends
+
+Change the dataframe, make a function to calculate if it is a weekend or a weekday.  
+
+```{r, echo = TRUE}
+isweekend <- function(mydate){
+    weekends <- c("Saturday","Sunday")
+    if(weekdays(strptime(mydate,"%Y-%m-%d")) %in% weekends){
+        result <- "weekend"
+    }else{
+        result <- "weekday"
+    }
+    result
+}
+newdatos$daytype <- as.factor(sapply(newdatos$date,isweekend))
+```
+
+### Plot containing a time series of the 5-minute interval and the average number of steps taken, averaged across all weekday days or weekend days
+
+```{r, recho = TRUE}
+days <- newdatos[newdatos$daytype == "weekday",]
+ends <- newdatos[newdatos$daytype == "weekend",]
+avrdays <- sapply(split(days$steps,days$interval),sum)/sum(days$steps)
+avrends <- sapply(split(ends$steps,ends$interval),sum)/sum(ends$steps)
+dayintervals = as.numeric(names(avrdays))
+endintervals = as.numeric(names(avrends))
+
+#make a dataframe of all the data
+df1 <- data.frame(interval = dayintervals, avr_steps = avrdays, daytype = "weekday")
+df2 <- data.frame(interval = endintervals, avr_steps = avrends, daytype = "weekend")
+
+plotdata <- rbind(df1,df2)
+qplot(interval,avr_steps,data=plotdata, geom = "line",
+      facets = daytype~.,colour = daytype,
+      xlab = "Interval",
+      ylab = "Average Steps",
+      main = "Average Steps Taken by Interval by Day Type")
+```
+
+And we can see that the user is more active on weekdays than on weekends, waking up at 5:00 a.m. on weekdays, stops walking at 12:00m, and on weekends wakes up somewhere around 6:00 or 7:00 am, and stays awake past 10:00 p.m. 
